--- a/errata.tex
+++ b/errata.tex
@@ -19,6 +19,8 @@
 \begin{verbatim}
     > Y <- eval.im(Z + 10)
 \end{verbatim}
+\item Page 261, line 2 of text: 
+\texttt{tile.index} should be \texttt{tileindex}.
 \item Page 308, Figure 9.3 caption: in the caption for the right panel,
 the name \texttt{code} should be \texttt{fit}.
 \item Page 535: \texttt{temper} should be \texttt{rtemper}.
