Added to errata

--- a/errata.tex
+++ b/errata.tex
@@ -26,6 +26,8 @@
 \begin{verbatim}
     > Y <- eval.im(Z + 10)
 \end{verbatim}
+\item Page 191, line 14: 
+ website \texttt{statscan.org} should read \texttt{satscan.org}
 \item Page 261, line 2 of text: 
 \texttt{tile.index} should be \texttt{tileindex}.
 \item Page 308, Figure 9.3 caption: in the caption for the right panel,
