--- a/errata.tex
+++ b/errata.tex
@@ -32,6 +32,8 @@
 \texttt{tile.index} should be \texttt{tileindex}.
 \item Page 308, Figure 9.3 caption: in the caption for the right panel,
 the name \texttt{code} should be \texttt{fit}.
+\item Page 521, line 7: the fraction of contested area is $-C(u, \bx)$,
+not $C(u,\bx)$.
 \item Page 535: \texttt{temper} should be \texttt{rtemper}.
 \item Page 544: A term has been omitted in equations (13.55) and (13.57).
 The right hand side of (13.55) should include the additional term
