--- a/errata.tex
+++ b/errata.tex
@@ -32,6 +32,8 @@
 \texttt{tile.index} should be \texttt{tileindex}.
 \item Page 308, Figure 9.3 caption: in the caption for the right panel,
 the name \texttt{code} should be \texttt{fit}.
+\item Page 344, lines 6--7: $\boldmaths\theta$ and $\bZ(u)$ 
+should be column vectors.
 \item Page 521, line 7: the fraction of contested area is $-C(u, \bx)$,
 not $C(u,\bx)$.
 \item Page 535: \texttt{temper} should be \texttt{rtemper}.
@@ -47,7 +49,10 @@ and the right hand side of (13.57) should include
 \item Page 786, reference [643]: volume number is \textbf{62}.
 \end{enumerate}
 
+We thank \textbf{Suman Rakshit} for alerting us to some of these errors.\\
+
 \vspace*{\fill}
+
 
 \hspace*{\fill} \today
 
