--- a/errata.tex
+++ b/errata.tex
@@ -26,6 +26,9 @@
 \begin{verbatim}
     > Y <- eval.im(Z + 10)
 \end{verbatim}
+\item Page 169, equation (6.9), the correct reference for Diggle's
+edge correction is not [222] % \cite{digg85}
+but [225, Section 8.2]. % \cite[Section 8.2]{digg03}
 \item Page 191, line 14: 
  website \texttt{statscan.org} should read \texttt{satscan.org}
 \item Page 261, line 2 of text: 
