--- a/errata.tex
+++ b/errata.tex
@@ -28,7 +28,20 @@
 \end{verbatim}
 \item Page 169, equation (6.9), the correct reference for Diggle's
 edge correction is not [222] % \cite{digg85}
-but [225, Section 8.2]. % \cite[Section 8.2]{digg03}
+but Diggle (2010), equation (18.9); see also Jones (1993).
+\begin{small}
+  \begin{itemize}
+  \item
+    Diggle, P.J. (2010)
+    Nonparametric methods.
+    Chapter 18, pp. 299--316 in
+    A.E. Gelfand, P.J. Diggle, M. Fuentes and P. Guttorp (eds.)
+    \emph{Handbook of Spatial Statistics}, CRC Press.
+  \item  Jones, M.C. (1993)
+    Simple boundary corrections for kernel density estimation.
+    \emph{Statistics and Computing} \textbf{3}, 135--146.
+  \end{itemize}
+\end{small}
 \item Page 191, line 14: 
  website \texttt{statscan.org} should read \texttt{satscan.org}
 \item Page 261, line 2 of text: 
@@ -52,7 +65,8 @@ and the right hand side of (13.57) should include
 \item Page 786, reference [643]: volume number is \textbf{62}.
 \end{enumerate}
 
-We thank \textbf{Suman Rakshit} for alerting us to some of these errors.\\
+We thank \textbf{Suman Rakshit} and \textbf{Tilman Davies}
+for alerting us to some of these errors.\\
 
 \vspace*{\fill}
 
