Added error spotted by Ege

--- a/errata.tex
+++ b/errata.tex
@@ -62,6 +62,7 @@ and the right hand side of (13.57) should include
 \[
   + \sum_{j=1}^n \left[ \bZ(x_j \mid \bx) - \bZ(x_j \mid \bx \setminus \{x_i\}) \right].
 \]
+\item Page 578, line 5: \texttt{plot(ProbU)} should be \texttt{plot(ProbD)}.
 \item Page 786, reference [643]: volume number is \textbf{62}.
 \end{enumerate}
 
