Adjusted code to reflect package changes

--- a/errata.tex
+++ b/errata.tex
@@ -22,6 +22,11 @@
 \end{center}
 
 \begin{enumerate}
+\item Page 67, line 3 from bottom: In recent versions of the software,
+  \texttt{package="spatstat"} needs to be replaced by
+  \texttt{package="spatstat.data"}.
+\item Page 68, line 4: likewise.
+\item Page 68, line 6 from bottom: likewise.
 \item Page 115, line 4 from bottom: the code should read
 \begin{verbatim}
     > Y <- eval.im(Z + 10)
