--- a/errata.tex
+++ b/errata.tex
@@ -53,6 +53,12 @@ but Diggle (2010), equation (18.9); see also Jones (1993).
 \texttt{tile.index} should be \texttt{tileindex}.
 \item Page 308, Figure 9.3 caption: in the caption for the right panel,
 the name \texttt{code} should be \texttt{fit}.
+\item Page 325, line 6--7 from bottom: the estimates of the coefficients
+  in (9.27) are $\mu =-6.0184$, $\beta=-0.2047$,
+  $\alpha_{\mbox{\scriptsize \texttt{FALSE}}} = 0$,
+  $\alpha_{\mbox{\scriptsize \texttt{TRUE}}} = 2.0013$,
+  $\gamma_{\mbox{\scriptsize \texttt{FALSE}}} = 0$ and
+  $\gamma_{\mbox{\scriptsize \texttt{TRUE}}} = 0.1674$.
 \item Page 344, lines 6--7: $\boldmaths\theta$ and $\bZ(u)$ 
 should be column vectors.
 \item Page 521, line 7: the fraction of contested area is $-C(u, \bx)$,
