--- a/errata.tex
+++ b/errata.tex
@@ -31,9 +31,10 @@
 \begin{verbatim}
     > Y <- eval.im(Z + 10)
 \end{verbatim}
-\item Page 169, equation (6.9), the correct reference for Diggle's
-edge correction is not [222] % \cite{digg85}
-but Diggle (2010), equation (18.9); see also Jones (1993).
+\item Page 169, equation (6.9), the edge correction that we called
+  ``Diggle's correction'' was first proposed by Jones (1993)
+  and should be called the ``Jones-Diggle correction''.
+  See also Diggle (2010), equation (18.9).
 \begin{small}
   \begin{itemize}
   \item
@@ -61,6 +62,10 @@ the name \texttt{code} should be \texttt{fit}.
   $\gamma_{\mbox{\scriptsize \texttt{TRUE}}} = 0.1674$.
 \item Page 344, lines 6--7: $\boldmaths\theta$ and $\bZ(u)$ 
 should be column vectors.
+\item Page 376, third displayed equation should read
+  \[
+       Z_2 = \sqrt{\frac{12}{n}} (\sum_i u_i - \frac n 2).
+  \]
 \item Page 521, line 7: the fraction of contested area is $-C(u, \bx)$,
 not $C(u,\bx)$.
 \item Page 535: \texttt{temper} should be \texttt{rtemper}.
