--- a/errata.tex
+++ b/errata.tex
@@ -91,6 +91,10 @@ and the right hand side of (13.57) should include
 \]
 \item Page 578, line 5: \texttt{plot(ProbU)} should be \texttt{plot(ProbD)}.
 \item Page 786, reference [643]: volume number is \textbf{62}.
+\item
+  The new package \texttt{local} for local likelihood, mentioned
+  in Sections~9.13, 12.5 and 13.11, has been renamed \texttt{spatstat.local}.
+  It is available on CRAN.
 \end{enumerate}
 
 We thank \textbf{Suman Rakshit} and \textbf{Tilman Davies}
