--- a/errata.tex
+++ b/errata.tex
@@ -32,6 +32,10 @@
 \begin{verbatim}
     > Y <- eval.im(Z + 10)
 \end{verbatim}
+\item Page 151. Reference to Bartlett [83] should be Bartlett (1964)
+  as listed below. (Also on pages 159, 189 and 210).
+\item Page 159. Reference to [83] should be Bartlett (1964)
+  as listed below.
 \item Page 169, equation (6.9), the edge correction that we called
   ``Diggle's correction'' was first proposed by Jones (1993)
   and should be called the ``Jones-Diggle correction''.
@@ -49,8 +53,12 @@
     \emph{Statistics and Computing} \textbf{3}, 135--146.
   \end{itemize}
 \end{small}
+\item Page 189. Reference to [83] should be Bartlett (1964)
+  as listed below.
 \item Page 191, line 14: 
  website \texttt{statscan.org} should read \texttt{satscan.org}
+\item Page 210. Reference to [83] should be Bartlett (1964)
+  as listed below.
 \item Page 261, line 2 of text: 
 \texttt{tile.index} should be \texttt{tileindex}.
 \item Page 308, Figure 9.3 caption: in the caption for the right panel,
@@ -97,8 +105,18 @@ and the right hand side of (13.57) should include
   It is available on CRAN.
 \end{enumerate}
 
+\subsubsection*{References}
+
+%bart64b in Adrian's biblio
+Bartlett, M.S.\ (1964)
+The spectral analysis of two-dimensional point processes.
+\emph{Biometrika} \textbf{51} (1964) 299--311.
+
+\subsubsection*{Acknowledgements}
+
 We thank \textbf{Suman Rakshit} and \textbf{Tilman Davies}
 for alerting us to some of these errors.\\
+
 
 \vspace*{\fill}
 
